--- a/popup.html
+++ b/popup.html
@@ -11,5 +11,6 @@
 </select>
 <button id="editButton">Edit GitHub File</button>
 <script src="popup.js"></script>
+<script type="text/javascript" src="oauth.js"></script>
 </body>
 </html>
